# UCM-Color

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  catalog.py  inventory.py  member.py  order.py  promotion.py  store.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py
backend/app/schemas/: catalog.py  common.py  inventory.py  member.py  order.py  promotion.py  store.py
backend/tests/: conftest.py  test_end_to_end.py
installer/: README.txt  install.ps1  install.sh
scripts/: build_installer.ps1  build_installer.sh  export_project.py
src/ucm_color_admin/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py  crud.py  database.py  dependencies.py  models.py  publisher.py  schemas.py  security.py  web.py
src/ucm_color_admin/templates/: base.html  catalog.html  catalog_create.html  dashboard.html  forms.html  login.html
